Fixed logo bug on small devices :bug: :lipstick:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,5 +119,6 @@ a:hover {
 
 .logo-img {
     width: 100%;
+    max-width: 60vw;
     height: auto;
 }
